[project]
name = "leetcode"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "rich>=15.0.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.31.0",
    "pre-commit>=4.3.0",
    "pyrefly>=1.0.0",
    "pytest>=8.4.2",
    "ruff>=0.15.15",
]
